Clean up and remove some sonar issue